--- a/src/main/resources/View/AdminDashBoardForm.fxml
+++ b/src/main/resources/View/AdminDashBoardForm.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controller.AdminDashBoardFormController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane fx:id="pane2" prefHeight="620.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminDashBoardFormController">
+   <children>
+      <ImageView fitHeight="683.0" fitWidth="900.0" layoutX="-20.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/img3.jpg" />
+         </image>
+      </ImageView>
+      <JFXButton layoutX="205.0" layoutY="500.0" onAction="#saveButtonOnAction" prefHeight="66.0" prefWidth="142.0" style="-fx-background-color: #5CA0D7; -fx-background-radius: 8;" text="Create Account">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </JFXButton>
+   </children>
 </AnchorPane>
