--- a/src/main/resources/View/AdminDashBoardForm.fxml
+++ b/src/main/resources/View/AdminDashBoardForm.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane2" prefHeight="620.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminDashBoardFormController">
+<AnchorPane fx:id="adminePane" prefHeight="620.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminDashBoardFormController">
    <children>
       <ImageView fitHeight="683.0" fitWidth="900.0" layoutX="-20.0" pickOnBounds="true" preserveRatio="true">
          <image>
