--- a/src/main/resources/View/EmployeeForm.fxml
+++ b/src/main/resources/View/EmployeeForm.fxml
@@ -19,9 +19,14 @@
             <Font name="System Bold" size="21.0" />
          </font>
       </JFXButton>
-      <Label fx:id="labelEmployeeID" layoutX="25.0" layoutY="28.0" prefHeight="59.0" prefWidth="140.0" style="-fx-background-color: #D6D9DC; -fx-background-radius: 10;">
+      <Label fx:id="labalID" layoutX="66.0" layoutY="64.0" prefHeight="49.0" prefWidth="93.0" style="-fx-background-color: #D6D9DC; -fx-background-radius: 7;" textAlignment="CENTER">
          <font>
-            <Font name="System Bold" size="27.0" />
+            <Font name="System Bold" size="19.0" />
+         </font>
+      </Label>
+      <Label fx:id="lableName" layoutX="229.0" layoutY="64.0" prefHeight="49.0" prefWidth="247.0" style="-fx-background-color: #D6D9DC; -fx-background-radius: 7;" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="19.0" />
          </font>
       </Label>
    </children>
