--- a/src/main/resources/View/EmployeeForm.fxml
+++ b/src/main/resources/View/EmployeeForm.fxml
@@ -14,7 +14,7 @@
             <Image url="@../Img/159434207-resized.jpg" />
          </image>
       </ImageView>
-      <JFXButton layoutX="66.0" layoutY="498.0" onAction="#updateButtonOnAction" prefHeight="82.0" prefWidth="216.0" style="-fx-background-color: #70C198; -fx-background-radius: 10;" text="Update Account">
+      <JFXButton layoutX="66.0" layoutY="498.0" onAction="#updateButtonOnAction" prefHeight="82.0" prefWidth="247.0" style="-fx-background-color: #70C198; -fx-background-radius: 10;" text="Update Account">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
@@ -29,5 +29,25 @@
             <Font name="System Bold" size="19.0" />
          </font>
       </Label>
+      <JFXButton layoutX="66.0" layoutY="350.0" onAction="#showItemOnAction" prefHeight="82.0" prefWidth="247.0" style="-fx-background-color: #70C198; -fx-background-radius: 10;" text="Item" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font name="System Bold" size="21.0" />
+         </font>
+      </JFXButton>
+      <ImageView fitHeight="66.0" fitWidth="61.0" layoutX="236.0" layoutY="361.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/icons8-list-64.png" />
+         </image>
+      </ImageView>
+      <JFXButton layoutX="66.0" layoutY="194.0" onAction="#placeOrderButtonOnAction" prefHeight="82.0" prefWidth="247.0" style="-fx-background-color: #70C198; -fx-background-radius: 10;" text="Place Order">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </JFXButton>
+      <ImageView fitHeight="61.0" fitWidth="61.0" layoutX="245.0" layoutY="205.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/icons8-mobile-order-96.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
