--- a/src/main/resources/View/PlaceOrderForm.fxml
+++ b/src/main/resources/View/PlaceOrderForm.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane fx:id="placeOrderPane" prefHeight="560.0" prefWidth="1045.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.PlaceOrderFormController">
    <children>
       <ImageView fitHeight="660.0" fitWidth="1141.0" layoutX="1.0" pickOnBounds="true" preserveRatio="true">
@@ -18,7 +17,7 @@
             <Image url="@../Img/electric-background-kbnan7yvr9zg6wx6.jpg" />
          </image>
       </ImageView>
-      <Label layoutY="24.0" prefHeight="65.0" prefWidth="425.0" text="       Place Order" textAlignment="CENTER" textFill="#140d0e">
+      <Label layoutX="72.0" layoutY="25.0" prefHeight="65.0" prefWidth="425.0" text="       Place Order" textAlignment="CENTER" textFill="#140d0e">
          <font>
             <Font name="System Bold" size="44.0" />
          </font>
@@ -79,7 +78,7 @@
             <Font name="System Bold" size="16.0" />
          </font>
       </Label>
-      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="900.0" layoutY="543.0" onAction="#placeButtonOnAction" prefHeight="56.0" prefWidth="82.0" style="-fx-background-color: #BED3F3; -fx-background-radius: 12;" text="OK" textFill="#fffdfd">
+      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="859.0" layoutY="546.0" onAction="#placeButtonOnAction" prefHeight="56.0" prefWidth="82.0" style="-fx-background-color: #BED3F3; -fx-background-radius: 12;" text="OK" textFill="#fffdfd">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
@@ -87,6 +86,15 @@
             <ImageView fitHeight="44.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../Img/icons8-tick.gif" />
+               </image>
+            </ImageView>
+         </graphic>
+      </JFXButton>
+      <JFXButton contentDisplay="GRAPHIC_ONLY" layoutX="14.0" layoutY="25.0" onAction="#backButtonOnAction" prefHeight="56.0" prefWidth="82.0" text="Button">
+         <graphic>
+            <ImageView fitHeight="56.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../Img/icons8-back-button-64.png" />
                </image>
             </ImageView>
          </graphic>
