--- a/src/main/resources/View/DashBoardForm.fxml
+++ b/src/main/resources/View/DashBoardForm.fxml
@@ -3,6 +3,7 @@
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.geometry.Point3D?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -24,20 +25,20 @@
             <Font name="Baskerville Old Face" size="42.0" />
          </font>
       </Label>
-      <TextField fx:id="emailTex" layoutX="164.0" layoutY="165.0" prefHeight="39.0" prefWidth="284.0" promptText="Email">
+      <TextField fx:id="emailTex" layoutX="164.0" layoutY="165.0" prefHeight="49.0" prefWidth="284.0" promptText="Email" style="-fx-background-radius: 10;">
          <font>
             <Font size="14.0" />
          </font>
       </TextField>
-      <TextField fx:id="passwordTex" layoutX="164.0" layoutY="241.0" prefHeight="39.0" prefWidth="284.0" promptText="Password">
+      <TextField fx:id="passwordTex" layoutX="164.0" layoutY="241.0" prefHeight="49.0" prefWidth="284.0" promptText="Password" style="-fx-background-radius: 10;">
          <font>
             <Font size="14.0" />
          </font></TextField>
-      <JFXButton contentDisplay="TOP" layoutX="164.0" layoutY="317.0" onAction="#adminButtonOnAction" prefHeight="39.0" prefWidth="95.0" style="-fx-background-color: #697689; -fx-background-radius: 8;" text="Admin" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
+      <JFXButton contentDisplay="TOP" layoutX="164.0" layoutY="347.0" onAction="#adminButtonOnAction" prefHeight="39.0" prefWidth="95.0" style="-fx-background-color: #697689; -fx-background-radius: 8;" text="Admin" textAlignment="CENTER" textOverrun="CENTER_WORD_ELLIPSIS">
          <font>
             <Font name="System Bold" size="15.0" />
          </font></JFXButton>
-      <JFXButton layoutX="353.0" layoutY="317.0" onAction="#emplyeeButtonOnAction" prefHeight="39.0" prefWidth="95.0" style="-fx-background-color: #1D6F68; -fx-background-radius: 8;" text="Employee" textAlignment="CENTER" AnchorPane.bottomAnchor="298.0" AnchorPane.leftAnchor="353.0" AnchorPane.rightAnchor="437.0" AnchorPane.topAnchor="317.0">
+      <JFXButton layoutX="353.0" layoutY="346.0" onAction="#emplyeeButtonOnAction" prefHeight="39.0" prefWidth="95.0" style="-fx-background-color: #1D6F68; -fx-background-radius: 8;" text="Employee" textAlignment="CENTER" AnchorPane.bottomAnchor="269.0" AnchorPane.leftAnchor="353.0" AnchorPane.rightAnchor="437.0" AnchorPane.topAnchor="346.0">
          <font>
             <Font name="System Bold" size="15.0" />
          </font>
@@ -53,7 +54,18 @@
             <Font size="25.0" />
          </font>
       </Label>
-      <PasswordField fx:id="passwordTexHidde" layoutX="164.0" layoutY="241.0" prefHeight="39.0" prefWidth="284.0" promptText="password" />
+      <PasswordField fx:id="passwordTexHidde" layoutX="164.0" layoutY="241.0" prefHeight="49.0" prefWidth="284.0" promptText="password" style="-fx-background-radius: 10;" />
       <CheckBox fx:id="chekBox" layoutX="467.0" layoutY="241.0" mnemonicParsing="false" onAction="#chekBokOnAction" onMouseDragEntered="#chekBokOnAction2" prefHeight="30.0" prefWidth="144.0" text="Show Password" />
+      <ImageView fitHeight="27.0" fitWidth="27.0" layoutX="409.0" layoutY="176.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/icons8-email-50.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="27.0" fitWidth="48.0" layoutX="409.0" layoutY="252.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/icons8-password-26.png" />
+         </image>
+      </ImageView>
+      <Button layoutX="164.0" layoutY="305.0" mnemonicParsing="false" onAction="#forgotPasswordOnAction" prefHeight="31.0" prefWidth="144.0" text="Forgot Password ?" />
    </children>
 </AnchorPane>
