--- a/src/main/resources/View/AdminDashBoardForm.fxml
+++ b/src/main/resources/View/AdminDashBoardForm.fxml
@@ -8,15 +8,25 @@
 
 <AnchorPane fx:id="adminePane" prefHeight="620.0" prefWidth="762.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AdminDashBoardFormController">
    <children>
-      <ImageView fitHeight="683.0" fitWidth="900.0" layoutX="-20.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="683.0" fitWidth="900.0" layoutX="-28.0" layoutY="-14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../Img/img3.jpg" />
          </image>
       </ImageView>
-      <JFXButton layoutX="205.0" layoutY="500.0" onAction="#saveButtonOnAction" prefHeight="66.0" prefWidth="142.0" style="-fx-background-color: #5CA0D7; -fx-background-radius: 8;" text="Create Account">
+      <JFXButton layoutX="203.0" layoutY="500.0" onAction="#saveButtonOnAction" prefHeight="66.0" prefWidth="152.0" style="-fx-background-color: #5CA0D7; -fx-background-radius: 8;" text="Create Account">
          <font>
-            <Font name="System Bold" size="16.0" />
+            <Font name="System Bold" size="17.0" />
          </font>
       </JFXButton>
+      <JFXButton layoutX="417.0" layoutY="500.0" onAction="#homeButtonOnAction" prefHeight="66.0" prefWidth="152.0" style="-fx-background-color: #F36358; -fx-background-radius: 10;" text="      Home">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </JFXButton>
+      <ImageView fitHeight="44.0" fitWidth="45.0" layoutX="425.0" layoutY="511.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../Img/icons8-home-page-48.png" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
